Design menu using bootstrap and add bootstrap alert

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1><a id="header1" href="menu.html" target="_blank">Menu</a></h1>
+        <h2><a id="header1" href="menu.html" target="_blank">Menu</a></h2>
         <p>This is a menu webpage which includes food items</p>
-        <h1><a href="html-elements.html" target="_blank">HTML Elements</a></h1>
+
+        <h2><a href="html-elements.html" target="_blank">HTML Elements</a></h2>
         <p>This is a webpage includes all the html elements</p>
+
+        <h2><a id="header1" href="menu-bootstrap.html" target="_blank">Menu Page - Using Bootstrap</a></h2>
+        <p>This is a menu webpage which includes food items done by using bootstrap</p>
+
     </body>
 </html>
