Create a profile page using bootstrap and link to index.html

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
         <h2><a id="header1" href="menu-bootstrap.html" target="_blank">Menu Page - Using Bootstrap</a></h2>
         <p>This is a menu webpage which includes food items done by using bootstrap</p>
 
+        <h2><a id="header1" href="profile-bootstrap.html" target="_blank">Profile Page - Using Bootstrap</a></h2>
+        <p>This is a profile webpage done by using bootstrap</p>
+
     </body>
 </html>
