Pseudo class and Pseudo Shadow class using html,css

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
         <h2><a href="html-elements.html" target="_blank">HTML Elements</a></h2>
         <p>This is a webpage includes all the html elements</p>
 
-        <h2><a id="header1" href="menu-bootstrap.html" target="_blank">Menu Page - Using Bootstrap</a></h2>
+        <h2><a href="menu-bootstrap.html" target="_blank">Menu Page - Using Bootstrap</a></h2>
         <p>This is a menu webpage which includes food items done by using bootstrap</p>
 
-        <h2><a id="header1" href="profile-bootstrap.html" target="_blank">Profile Page - Using Bootstrap</a></h2>
+        <h2><a href="profile-bootstrap.html" target="_blank">Profile Page - Using Bootstrap</a></h2>
         <p>This is a profile webpage done by using bootstrap</p>
+
+        <h2><a href="pseudo-class.html" target="_blank">Profile Page - Using Bootstrap</a></h2>
+        <p>This is a Pseudo class</p>
 
     </body>
 </html>
