--- a/pseudo-shadow.html
+++ b/pseudo-shadow.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Pseudo Class</title>
+  <title>Pseudo Shadow Class</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="pseudoshadow.css">
