Update name of the link

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <h2><a href="profile-bootstrap.html" target="_blank">Profile Page - Using Bootstrap</a></h2>
         <p>This is a profile webpage done by using bootstrap</p>
 
-        <h2><a href="pseudo-class.html" target="_blank">Profile Page - Using Bootstrap</a></h2>
-        <p>This is a Pseudo class</p>
+        <h2><a href="pseudo-class.html" target="_blank">Pseudo Class</a></h2>
+        <p>This is a Pseudo Class</p>
 
     </body>
 </html>
